--- a/.github/workflows/GetScreen Windows (4H).yml
+++ b/.github/workflows/GetScreen Windows (4H).yml
@@ -11,7 +11,7 @@ jobs:
       - name: Downloading & Setting Up
         run: |
          echo "EMAIL_SECRET=abdibr47@utb.karlskoga.se" > secrets.txt
-         Invoke-WebRequest -Url "https://www.dropbox.com/scl/fi/gdzoens68gz1o4wuwtf0x/down.bat?rlkey=wd1ecn33dv9yn2uvdyynavbs6&dl=1" -OutFile "down.bat"
+         Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/gdzoens68gz1o4wuwtf0x/down.bat?rlkey=wd1ecn33dv9yn2uvdyynavbs6&dl=1" -OutFile "down.bat"
          cmd /c down.bat
 
       - name: Time Counter
